Updated All Pages
Updated All Pages to apply feedback from user tester 1

--- a/accessories.html
+++ b/accessories.html
@@ -60,6 +60,7 @@
                 <div id="centre_heading"><h1>Accessories</h1></div>
             </div>
           </div>
+          <br></br>
           <div class="row">
             <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                 <div class="card-2 mb-4">
@@ -106,6 +107,7 @@
               </div>
             </div>
           </div>
+          <br></br>
             <div class="row">
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <div class="card-2 mb-4">
@@ -152,6 +154,7 @@
                 </div>
               </div>
             </div>
+            <br></br>
             <div class="row">
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <div class="card-2 mb-4">
@@ -198,6 +201,7 @@
                 </div>
               </div>
             </div>
+            <br></br>
             <div class="row">
               <div class="col-12 col-xs-6 col-sm-6 col-md-3 col-lg-3">
                   <div class="card-2 mb-4">
@@ -303,7 +307,7 @@
                 <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="images/main_images/followus_instagram_40x40.png" style="width:40px" alt="Instagram Icon"></a>
                 <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
-                <a href="https://www.youtube.com/" traget="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
             </div>
         </footer> 
       </body>
