--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                   <li data-target="#demo" data-slide-to="0" class="active"></li>
                   <li data-target="#demo" data-slide-to="1"></li>
                   <li data-target="#demo" data-slide-to="2"></li>
+                  <li data-target="#demo" data-slide-to="3"></li>
+                  <li data-target="#demo" data-slide-to="4"></li>
+                  <li data-target="#demo" data-slide-to="5"></li>
                 </ul>
               
                 <!-- The slideshow -->
@@ -269,7 +272,7 @@
                 <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="images/main_images/followus_instagram_40x40.png" style="width:40px" alt="Instagram Icon"></a>
                 <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
-                <a href="https://www.youtube.com/" traget="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
             </div>
         </footer> 
       </body>
