--- a/contact_us.html
+++ b/contact_us.html
@@ -60,11 +60,7 @@
                   <div id="centre_heading"><h1>Contact Us</h1></div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-12">
-                  <p></p>
-              </div>
-            </div>
+            <br></br>
             <div class="row">
               <div class="col-12">
                 <div class="Map">
@@ -72,11 +68,7 @@
                 </div>
               </div>
             </div>
-            <div class="row">
-              <div class="col-12">
-                  <p></p>
-              </div>
-            </div>
+            <br></br>
             <div class="row">
               <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <table class="table table-hover">
@@ -115,6 +107,7 @@
                 </table>
               </div>
             </div>
+            <br></br>
             <div class="row">
               <div class="col-12">
                 <div id="centre_heading"><h2>Please enjoy these videos by Sancta Maria College who have bought instruments from us</h2></div>
@@ -122,83 +115,84 @@
                 </div>
               </div>
             </div>
-        </div>  
+        </div>
+        <br></br>
             <!-- Container for the image gallery -->
             <div class="container">
 
-              <!-- Full-width images with number text -->
-              <div class="mySlides">
-                <div class="numbertext">1 / 6</div>
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="images/contact_us_page/combo_1_video.mp4" allowfullscreen></iframe>
+                <!-- Full-width images with number text -->
+                <div class="mySlides">
+                  <div class="numbertext">1 / 6</div>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="images/contact_us_page/combo_1_video.mp4" allowfullscreen></iframe>
+                  </div>
                 </div>
-              </div>
 
-              <div class="mySlides">
-                <div class="numbertext">2 / 6</div>
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="images/contact_us_page/combo_2_video.mp4" allowfullscreen></iframe>
+                <div class="mySlides">
+                  <div class="numbertext">2 / 6</div>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="images/contact_us_page/combo_2_video.mp4" allowfullscreen></iframe>
+                  </div>
                 </div>
-              </div>
 
-              <div class="mySlides">
-                <div class="numbertext">3 / 6</div>
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="images/contact_us_page/combo_3_video.mp4" allowfullscreen></iframe>
+                <div class="mySlides">
+                  <div class="numbertext">3 / 6</div>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="images/contact_us_page/combo_3_video.mp4" allowfullscreen></iframe>
+                  </div>
                 </div>
-              </div>
 
-              <div class="mySlides">
-                <div class="numbertext">4 / 6</div>
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="images/contact_us_page/combo_4_video.mp4" allowfullscreen></iframe>
+                <div class="mySlides">
+                  <div class="numbertext">4 / 6</div>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="images/contact_us_page/combo_4_video.mp4" allowfullscreen></iframe>
+                  </div>
                 </div>
-              </div>
 
-              <div class="mySlides">
-                <div class="numbertext">5 / 6</div>
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="images/contact_us_page/big_band_1_video.mp4" allowfullscreen></iframe>
+                <div class="mySlides">
+                  <div class="numbertext">5 / 6</div>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="images/contact_us_page/big_band_1_video.mp4" allowfullscreen></iframe>
+                  </div>
                 </div>
-              </div>
 
-              <div class="mySlides">
-                <div class="numbertext">6 / 6</div>
-                <div class="embed-responsive embed-responsive-16by9">
-                  <iframe class="embed-responsive-item" src="images/contact_us_page/big_band_2_video.mp4" allowfullscreen></iframe>
+                <div class="mySlides">
+                  <div class="numbertext">6 / 6</div>
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="images/contact_us_page/big_band_2_video.mp4" allowfullscreen></iframe>
+                  </div>
                 </div>
-              </div>
 
-              <!-- Next and previous buttons -->
-              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-              <!-- Image text -->
-              <div class="caption-container">
-                <p id="caption"></p>
-              </div>
+                <!-- Image text -->
+                <div class="caption-container">
+                  <p id="caption"></p>
+                </div>
 
-              <!-- Thumbnail images -->
-              <div class="row">
-                <div class="column">
-                  <img class="demo cursor" src="images/contact_us_page/combo_1.png" onclick="currentSlide(1)" alt="Combo 1 Sancta Maria College">
+                <!-- Thumbnail images -->
+                <div class="row">
+                  <div class="column">
+                    <img class="demo cursor" src="images/contact_us_page/combo_1.png" onclick="currentSlide(1)" alt="Combo 1 Sancta Maria College">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="images/contact_us_page/combo_2.png" onclick="currentSlide(2)" alt="Combo 2 Sancta Maria College">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="images/contact_us_page/combo_3.png" onclick="currentSlide(3)" alt="Combo 3 Sancta Maria College">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="images/contact_us_page/combo_4.png" onclick="currentSlide(4)" alt="Combo 4 Sancta Maria College">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="images/contact_us_page/big_band_1.png" onclick="currentSlide(5)" alt="Big Band Sancta Maria College">
+                  </div>
+                  <div class="column">
+                    <img class="demo cursor" src="images/contact_us_page/big_band_2.png" onclick="currentSlide(6)" alt="Junior Jazz Orchestra Sancta Maria College">
+                  </div>
                 </div>
-                <div class="column">
-                  <img class="demo cursor" src="images/contact_us_page/combo_2.png" onclick="currentSlide(2)" alt="Combo 2 Sancta Maria College">
-                </div>
-                <div class="column">
-                  <img class="demo cursor" src="images/contact_us_page/combo_3.png" onclick="currentSlide(3)" alt="Combo 3 Sancta Maria College">
-                </div>
-                <div class="column">
-                  <img class="demo cursor" src="images/contact_us_page/combo_4.png" onclick="currentSlide(4)" alt="Combo 4 Sancta Maria College">
-                </div>
-                <div class="column">
-                  <img class="demo cursor" src="images/contact_us_page/big_band_1.png" onclick="currentSlide(5)" alt="Big Band Sancta Maria College">
-                </div>
-                <div class="column">
-                  <img class="demo cursor" src="images/contact_us_page/big_band_2.png" onclick="currentSlide(6)" alt="Junior Jazz Orchestra Sancta Maria College">
-                </div>
-              </div>
             </div>
         
         <script>
@@ -258,9 +252,7 @@
           }
         </script>
         
-        <div class="row">
-          <p></p>
-        </div>
+        <br></br>
 
         <div class="footer">
           <div class="row">
@@ -294,7 +286,7 @@
                 <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="images/main_images/followus_instagram_40x40.png" style="width:40px" alt="Instagram Icon"></a>
                 <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
-                <a href="https://www.youtube.com/" traget="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
             </div>
         </footer> 
       </body>
