--- a/drums_percussions.html
+++ b/drums_percussions.html
@@ -65,11 +65,7 @@
                 <div id="centre_heading"><h2>Please Contact us for avaliability and a test time</h2></div>
             </div>
           </div>
-          <div class="row">
-            <div class="col-12">
-                <p></p>
-            </div>
-          </div>
+          <br></br>
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                   <div class="card-2">
@@ -121,6 +117,7 @@
                   </table>
               </div>
           </div>
+          <br></br>
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                   <div class="card-2">
@@ -172,6 +169,7 @@
                   </table>
               </div>
           </div>
+          <br></br>
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                   <div class="card-2">
@@ -223,6 +221,7 @@
                   </table>
               </div>
           </div>
+          <br></br>
           <div class="row">
               <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                   <div class="card-2">
@@ -263,6 +262,7 @@
               </div>
           </div>
         </div>
+        <br></br>
 
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
         
@@ -320,7 +320,7 @@
                 <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
                 <a href="https://www.instagram.com/" target="_blank"><img src="images/main_images/followus_instagram_40x40.png" style="width:40px" alt="Instagram Icon"></a>
                 <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
-                <a href="https://www.youtube.com/" traget="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
+                <a href="https://www.youtube.com/" target="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
             </div>
         </footer> 
       </body>
