Updated All Pages
Updated All Pages to apply feedback from user tester 2

--- a/basses.html
+++ b/basses.html
@@ -111,7 +111,7 @@
                         <td>Amplifier, Power Cord, Guitar Lead</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">90</span></td>
                       </tr>
                   </table>
@@ -163,7 +163,7 @@
                         <td>Bass Guitar and Strap</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">95</span></td>
                       </tr>
                   </table>
@@ -215,7 +215,7 @@
                         <td>Bass Guitar and Strap</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">85</span></td>
                       </tr>
                   </table>
@@ -267,7 +267,7 @@
                         <td>Bass Guitar and Strap</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">97</span></td>
                       </tr>
                   </table>
@@ -319,7 +319,7 @@
                         <td>Double Bass, Bow, and Rosin</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">99</span></td>
                       </tr>
                   </table>
