--- a/drums_percussions.html
+++ b/drums_percussions.html
@@ -111,7 +111,7 @@
                         <td>Drum Kit (Excludes Symbols), Throne, Profession Sticks and Bag</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">92</span></td>
                       </tr>
                   </table>
@@ -163,7 +163,7 @@
                         <td>Drum Kit (Excludes Symbols), Throne, Profession Sticks and Bag</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">95</span></td>
                       </tr>
                   </table>
@@ -215,7 +215,7 @@
                         <td>Drum Kit (Includes Symbols), Throne, Profession Sticks and Bag</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">98</span></td>
                       </tr>
                   </table>
@@ -255,7 +255,7 @@
                         <td>Drum Kit, Throne, Profession Sticks and Bag</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">99</span></td>
                       </tr>
                   </table>
