--- a/guitars.html
+++ b/guitars.html
@@ -111,7 +111,7 @@
                         <td>Guitar, Wammy Bar, Strap</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">90</span></td>
                       </tr>
                   </table>
@@ -163,7 +163,7 @@
                       <td>Guitar and Strap</td>
                     </tr>
                     <tr>
-                      <td>Rating</td>
+                      <td>Rating (out of 100)</td>
                       <td><span class="badge badge-pill badge-success">92</span></td>
                     </tr>
                 </table>
@@ -215,7 +215,7 @@
                     <td>Guitar, Wammy Bar, Strap</td>
                   </tr>
                   <tr>
-                    <td>Rating</td>
+                    <td>Rating (out of 100)</td>
                     <td><span class="badge badge-pill badge-success">88</span></td>
                   </tr>
               </table>
@@ -268,7 +268,7 @@
                   <td>Guitar and Strap</td>
                 </tr>
                 <tr>
-                  <td>Rating</td>
+                  <td>Rating (out of 100)</td>
                   <td><span class="badge badge-pill badge-success">96</span></td>
                 </tr>
             </table>
@@ -321,7 +321,7 @@
                 <td>Guitar and Strap</td>
               </tr>
               <tr>
-                <td>Rating</td>
+                <td>Rating (out of 100)</td>
                 <td><span class="badge badge-pill badge-success">82</span></td>
               </tr>
           </table>
@@ -373,7 +373,7 @@
                 <td>Guitar and Strap</td>
               </tr>
               <tr>
-                <td>Rating</td>
+                <td>Rating (out of 100)</td>
                 <td><span class="badge badge-pill badge-success">90</span></td>
               </tr>
           </table>
@@ -425,7 +425,7 @@
                 <td>Guitar and Strap</td>
               </tr>
               <tr>
-                <td>Rating</td>
+                <td>Rating (out of 100)</td>
                 <td><span class="badge badge-pill badge-success">86</span></td>
               </tr>
           </table>
@@ -477,7 +477,7 @@
                 <td>Guitar and Strap</td>
               </tr>
               <tr>
-                <td>Rating</td>
+                <td>Rating (out of 100)</td>
                 <td><span class="badge badge-pill badge-success">95</span></td>
               </tr>
           </table>
@@ -529,7 +529,7 @@
                 <td>Amplifier, Power Cord, Guitar Lead</td>
               </tr>
               <tr>
-                <td>Rating</td>
+                <td>Rating (out of 100)</td>
                 <td><span class="badge badge-pill badge-success">90</span></td>
               </tr>
           </table>
