--- a/pianos.html
+++ b/pianos.html
@@ -111,7 +111,7 @@
                           <td>Piano, Black Stool, and castor cups</td>
                         </tr>
                         <tr>
-                          <td>Rating</td>
+                          <td>Rating (out of 100)</td>
                           <td><span class="badge badge-pill badge-success">85</span></td>
                         </tr>
                     </table>
@@ -164,7 +164,7 @@
                       <td>Piano, Brown Stool, and castor cups</td>
                     </tr>
                     <tr>
-                      <td>Rating</td>
+                      <td>Rating (out of 100)</td>
                       <td><span class="badge badge-pill badge-success">90</span></td>
                     </tr>
                 </table>
@@ -217,7 +217,7 @@
                     <td>Piano, Brown Stool, castor cups, and a free metronome</td>
                   </tr>
                   <tr>
-                    <td>Rating</td>
+                    <td>Rating (out of 100)</td>
                     <td><span class="badge badge-pill badge-success">96</span></td>
                   </tr>
               </table>
@@ -269,7 +269,7 @@
                     <td>Piano, Black Stool, and castor cups</td>
                   </tr>
                   <tr>
-                    <td>Rating</td>
+                    <td>Rating (out of 100)</td>
                     <td><span class="badge badge-pill badge-success">80</span></td>
                   </tr>
               </table>
@@ -321,7 +321,7 @@
                     <td>Piano, White Stool, and castor cups</td>
                   </tr>
                   <tr>
-                    <td>Rating</td>
+                    <td>Rating (out of 100)</td>
                     <td><span class="badge badge-pill badge-success">90</span></td>
                   </tr>
               </table>
@@ -374,7 +374,7 @@
                     <td>Piano, Black Stool, and castor cups</td>
                   </tr>
                   <tr>
-                    <td>Rating</td>
+                    <td>Rating (out of 100)</td>
                     <td><span class="badge badge-pill badge-success">99</span></td>
                   </tr>
               </table>
@@ -426,7 +426,7 @@
                     <td>Piano, White Stool, and castor cups</td>
                   </tr>
                   <tr>
-                    <td>Rating</td>
+                    <td>Rating (out of 100)</td>
                     <td><span class="badge badge-pill badge-success">90</span></td>
                   </tr>
               </table>
@@ -478,7 +478,7 @@
                     <td>Piano, Brown Stool, and castor cups</td>
                   </tr>
                   <tr>
-                    <td>Rating</td>
+                    <td>Rating (out of 100)</td>
                     <td><span class="badge badge-pill badge-success">80</span></td>
                   </tr>
               </table>
@@ -534,7 +534,7 @@
                   <td>2x Guitar Jacks (L Mono and Right)</td>
                 </tr>
                 <tr>
-                  <td>Rating</td>
+                  <td>Rating (out of 100)</td>
                   <td><span class="badge badge-pill badge-success">80</span></td>
                 </tr>
             </table>
@@ -590,7 +590,7 @@
                 <td>2x Guitar Jacks (L Mono and Right)</td>
               </tr>
               <tr>
-                <td>Rating</td>
+                <td>Rating (out of 100)</td>
                 <td><span class="badge badge-pill badge-success">85</span></td>
               </tr>
           </table>
