--- a/sound.html
+++ b/sound.html
@@ -111,7 +111,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">95</span></td>
                       </tr>
                   </table>
@@ -163,7 +163,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">97</span></td>
                       </tr>
                   </table>
@@ -215,7 +215,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">93</span></td>
                       </tr>
                   </table>
@@ -267,7 +267,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">91</span></td>
                       </tr>
                   </table>
@@ -315,7 +315,7 @@
                         <td>Mixer, Power Cord</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">95</span></td>
                       </tr>
                   </table>
@@ -363,7 +363,7 @@
                         <td>Mixer, Power Cord</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">97</span></td>
                       </tr>
                   </table>
@@ -415,7 +415,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">88</span></td>
                       </tr>
                   </table>
@@ -467,7 +467,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">90</span></td>
                       </tr>
                   </table>
@@ -519,7 +519,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">92</span></td>
                       </tr>
                   </table>
@@ -571,7 +571,7 @@
                         <td>Speaker, Power Cord, Cover for Speaker</td>
                       </tr>
                       <tr>
-                        <td>Rating</td>
+                        <td>Rating (out of 100)</td>
                         <td><span class="badge badge-pill badge-success">98</span></td>
                       </tr>
                   </table>
